2004-03-07  Hagen Moebius  <hagen.moebius@starschiffchen.de>
 
         * codegen/docextract.py: avoid the non-uniform behavior of gtk-doc
         to have an imaginary "returns" parameter. it is converted into the
         <return>-tag.

2004-03-07  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* examples/pygtk-demo/gtk-logo-rgb.gif,
	* Makefile.am (EXTRA_DIST): Add gtk-logo-rgb.gif, because of stock
	icon registration example.

	* examples/pygtk-demo/demos/appwindow.py: Fix stock icon
	registration.

2004-03-06  John Ehresman  <jpe@wingide.com>

	* gtk/gtktreeview.override (map_expanded_rows_cb)
	(_wrap_gtk_tree_view_map_expanded_rows): Wrapper for
	GtkTreeView.map_expanded_rows.  Fixes #136309.  Review and minor
	enhancement by Gustavo Carneiro.

	* gtk/pygtktreemodel.c (pygtk_generic_tree_model_iface_init)
	(pygtk_generic_tree_model_unref_node)
	(pygtk_generic_tree_model_ref_node): Add support for optional
	TreeModel ref_node & unref_node callbacks.  Fixes #136312.
	Reviewed by Gustavo Carneiro.

	* gtk/gtktreeview.override (pygtk_cell_data_func_marshal): Fix
	reference problem on cunote->data.  Fixes #136306
	( pygtk_cell_data_func_marshal ref counting in 2.2.0rc1 ).
	Reviewed by Gustavo Caneiro.

2004-03-06  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* gtk/makefile.msc: use PYGTK_CODEGEN_DEFINES here too.

	* gtk/gtk-types.defs: Make TextSearchFlags an enum or flags type,
	conditional on HAVE_GTK24 being defined.  Fixes #136204.

	* gtk/Makefile.am (.defs.c): Pass $(PYGTK_CODEGEN_DEFINES) to code
	generator, for conditional compiling of GTK+ 2.4 features.

	* configure.in: Check for gtk+ >= 2.3.4 and, if found, define
	PYGTK_CODEGEN_DEFINES="-DHAVE_GTK24".

	* codegen/defsparser.py (DefsParser.ifndef): Implement (ifndef
	...)
	(DefsParser.ifdef): args no longer includes the function name
	(ifdef) as first element of list, so needed to offset indices to
	make it work again.
	(DefsParser.ifndef): idem.
