@@ -13,7 +13,6 @@ m4_define(pango_required_version,    1.0.0)
 m4_define(atk_required_version,      1.0.0)
 m4_define(gtk_required_version,      2.2.0)
 m4_define(libglade_required_version, 2.0.0)
-m4_define(gtkgl_required_version,    1.99.0)
 
 AC_INIT(pygtk, pygtk_version,
         [http://bugzilla.gnome.org/enter_bug.cgi?product=pygtk])
